feat: Implement Dashboard UI for rotary phone control with status display and simulation controls
feat: Add SignalR service for real-time call state updates and incoming call notifications

feat: Create API service for handling HTTP requests to the backend

feat: Establish Zustand store for managing phone call state and history

style: Define dark theme for the application with custom color palette and typography

feat: Define types for contacts and call history entries

chore: Configure TypeScript settings for the application

chore: Set up Vite for development and build processes

test: Add unit tests for Bluetooth hardware accessibility and call history service

test: Implement tests for call manager functionality and contact service operations

feat: Develop CallHistoryController for managing call history via API

feat: Create ContactsController for CRUD operations on contacts

feat: Implement PhoneController for simulating phone actions via API

feat: Set up SignalR hub for broadcasting call state changes and incoming calls

feat: Create SignalRNotifierService for notifying clients of state changes

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,12 @@ ServiceFabricBackup/
 # Application data
 data/
 contacts.json
+
+# Publish output
+publish/
+
+# Frontend build artifacts
+src/RotaryPhoneController.WebUI/wwwroot/assets/
+src/RotaryPhoneController.WebUI/wwwroot/index.html
+src/RotaryPhoneController.WebUI/wwwroot/vite.svg
+src/RotaryPhoneController.WebUI/wwwroot/*.styles.css
