--- a/src/RotaryPhoneController.WebUI/RotaryPhoneController.WebUI.csproj
+++ b/src/RotaryPhoneController.WebUI/RotaryPhoneController.WebUI.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
   </ItemGroup>
 
   <ItemGroup>
