--- a/src/RotaryPhoneController.Server/appsettings.json
+++ b/src/RotaryPhoneController.Server/appsettings.json
@@ -1,4 +1,23 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      { "Name": "Debug" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/rotary-.log",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 31,
+          "fileSizeLimitBytes": 10485760,
+          "rollOnFileSizeLimit": true
+        }
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
