feat: Implement Dashboard UI for rotary phone control with status display and simulation controls
feat: Add SignalR service for real-time call state updates and incoming call notifications

feat: Create API service for handling HTTP requests to the backend

feat: Establish Zustand store for managing phone call state and history

style: Define dark theme for the application with custom color palette and typography

feat: Define types for contacts and call history entries

chore: Configure TypeScript settings for the application

chore: Set up Vite for development and build processes

test: Add unit tests for Bluetooth hardware accessibility and call history service

test: Implement tests for call manager functionality and contact service operations

feat: Develop CallHistoryController for managing call history via API

feat: Create ContactsController for CRUD operations on contacts

feat: Implement PhoneController for simulating phone actions via API

feat: Set up SignalR hub for broadcasting call state changes and incoming calls

feat: Create SignalRNotifierService for notifying clients of state changes

--- a/src/RotaryPhoneController.Server/RotaryPhoneController.Server.csproj
+++ b/src/RotaryPhoneController.Server/RotaryPhoneController.Server.csproj
@@ -14,8 +14,17 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\RotaryPhoneController.Core\RotaryPhoneController.Core.csproj" />
+  <!-- Platform-specific Core project reference -->
+  <!-- On Windows, use the Windows TFM to get Windows Bluetooth APIs -->
+  <ItemGroup Condition="'$(OS)' == 'Windows_NT'">
+    <ProjectReference Include="..\RotaryPhoneController.Core\RotaryPhoneController.Core.csproj"
+                      SetTargetFramework="TargetFramework=net9.0-windows10.0.19041.0" />
+  </ItemGroup>
+
+  <!-- On Linux/macOS, use the standard TFM -->
+  <ItemGroup Condition="'$(OS)' != 'Windows_NT'">
+    <ProjectReference Include="..\RotaryPhoneController.Core\RotaryPhoneController.Core.csproj"
+                      SetTargetFramework="TargetFramework=net9.0" />
   </ItemGroup>
 
 </Project>
