--- a/src/RotaryPhoneController.Core/RotaryPhoneController.Core.csproj
+++ b/src/RotaryPhoneController.Core/RotaryPhoneController.Core.csproj
@@ -1,16 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net9.0;net9.0-windows10.0.19041.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <!-- Define WINDOWS constant for Windows builds -->
+  <PropertyGroup Condition="$(TargetFramework.Contains('windows'))">
+    <DefineConstants>$(DefineConstants);WINDOWS</DefineConstants>
+  </PropertyGroup>
+
+  <!-- Shared dependencies (all platforms) -->
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.10" />
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="SIPSorcery" Version="8.0.23" />
+  </ItemGroup>
+
+  <!-- Windows-only dependencies -->
+  <ItemGroup Condition="$(TargetFramework.Contains('windows'))">
+    <!-- Windows Bluetooth APIs are included in the Windows SDK via the TFM -->
+  </ItemGroup>
+
+  <!-- Linux-only dependencies -->
+  <ItemGroup Condition="!$(TargetFramework.Contains('windows'))">
     <PackageReference Include="Tmds.DBus" Version="0.15.0" />
   </ItemGroup>
 
